--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    <h1>Welcome TO MY Game</h1>
+    <h1><u></u>WELCOME TO MY GAME</u></h1>
+    <h2><u>THE SNAKE GAME</u></h2>
+
     <button><a href="index2.html">START</a></button>
 
 </body>
