--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1><u></u>WELCOME TO MY GAME</u></h1>
     <h2><u>THE SNAKE GAME</u></h2>
 
-    <button><a href="index2.html">START</a></button>
+    <button><a href="index2.html"><u>START</u></a></button>
 
 </body>
 </html>
